--- a/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
@@ -65,13 +65,13 @@
                     </div>
                     <div class="col-span-6 text-xl my-4">
                         Data de Emissão: <span
-                            class="font-bold">{{aplicanteData.certificadoLicencaAtividade.updatedAt | date:'dd MMMM yyyy': 'pt'}}</span>
+                            class="font-bold">{{aplicanteData.pedidoLicencaAtividade.certificadoLicencaAtividade.dataEmissao| date:'dd MMMM yyyy': 'pt'}}</span>
                     </div>
                     <div class="col-span-6 text-xl my-4">
                         Validade até <span class="font-bold">{{dataValido | date:'dd MMMM yyyy': 'pt'}}</span>
                     </div>
                 </div>
-                 <div class="flex items-center bottom-0">
+                <div class="flex items-center bottom-0">
                     <div class="flex-1 flex justify-center">
                         <!-- Centered content -->
                         <div>
