--- a/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
@@ -368,4 +368,4 @@
          [label]="isNew? 'Guardar' : 'Actualizar'" severity="success" [icon]="isNew? 'pi pi-save' : 'pi pi-sync'" />
  </form>
  }
- <p-toast position="bottom-right" />
+ <p-toast position="bottom-center" />
