--- a/src/app/pages/application-management/application-atividade-detail/pedido-vistoria-form/pedido-vistoria-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pedido-vistoria-form/pedido-vistoria-form.component.html
@@ -221,4 +221,4 @@
      <p-button (click)="submit(vistoriaRequestForm)" [label]="pedido? 'Actualizar' : 'Guardar'" severity="success"
          [icon]="pedido? 'pi pi-sync' : 'pi pi-save'" />
  </form>
- <p-toast position="bottom-right" />
+ <p-toast position="bottom-center" />
