--- a/src/app/pages/application-management/application-atividade-detail/fatura-vistoria-form/fatura-vistoria-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/fatura-vistoria-form/fatura-vistoria-form.component.html
@@ -50,6 +50,7 @@
              </div>
          </div>
 
+         @if (faturaId) {
          <span class="text-xl font-bold mt-6 mb-3 block">
              Carregar Recibo
          </span>
@@ -83,6 +84,7 @@
                  </ng-template>
              </p-fileupload>
          </div>
+         }
      </div>
  </form>
  <p-toast position="top-right" />
