--- a/src/app/pages/usermanagement/user-form.html
+++ b/src/app/pages/usermanagement/user-form.html
@@ -88,7 +88,12 @@
                                     }
                                     @case ('ROLE_MANAGER') {
                                     <div>
-                                        Gestór
+                                        Diretór
+                                    </div>
+                                    }
+                                    @case ('ROLE_CHIEF') {
+                                    <div>
+                                        Xefe Departamento
                                     </div>
                                     }
                                     @case ('ROLE_STAFF') {
@@ -115,7 +120,12 @@
                                     }
                                     @case ('ROLE_MANAGER') {
                                     <div>
-                                        Gestór
+                                        Diretór
+                                    </div>
+                                    }
+                                    @case ('ROLE_CHIEF') {
+                                    <div>
+                                        Xefe Departamento
                                     </div>
                                     }
                                     @case ('ROLE_STAFF') {
