--- a/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
@@ -360,11 +360,38 @@
              <label for="outrosDocumentos" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                  OUTROS DOCUMENTOS
              </label>
-             <textarea rows="8" cols="30" variant="outlined" pTextarea formControlName="outrosDocumentos"
-                 fluid></textarea>
+             <p-fileupload name="files" method="post" (onUpload)="onUploadDocs($event)" [maxFileSize]="maxFileSize"
+                 [multiple]="true" accept="application/pdf" mode="advanced" [url]="uploadURLDocs()">
+                 <ng-template #empty>
+                     @if (uploadedDocs.length === 0) {
+                     Arraste e largue os ficheiros aqui para carregar.
+                     }
+                 </ng-template>
+                 <ng-template #content>
+                     @if (uploadedDocs.length > 0) {
+                     <ul>
+                         @for (item of uploadedDocs; track $index) {
+                         <li>
+                             <a class="cursor-pointer hover:underline hover:text-teal-300">
+                                 {{ item.nome }} - {{ bytesToMBs(item.tamanho) }}
+                             </a>
+                             &nbsp;
+                             <p-button (click)="downloadDoc(item.id)" [loading]="loadingDownloadButtons.has(item.id)"
+                                 icon="pi pi-download" [rounded]="true" [text]="true" severity="success" />
+                             &nbsp;
+                             <p-button icon="pi pi-trash" [rounded]="true" [text]="true"
+                                 [loading]="loadingRemoveButtons.has(item.id)" severity="danger"
+                                 (click)="removeDoc(item)" />
+                         </li>
+                         }
+                     </ul>
+                     }
+                 </ng-template>
+             </p-fileupload>
          </div>
      </div>
-     <p-button (click)="isNew? save(requestForm): update(requestForm)" [loading]="isLoading"
+     <p-button [disabled]="!requestForm.valid"
+         (click)="isNew? save(requestForm): update(requestForm)" [loading]="isLoading"
          [label]="isNew? 'Guardar' : 'Actualizar'" severity="success" [icon]="isNew? 'pi pi-save' : 'pi pi-sync'" />
  </form>
  }
